# POO_Veterinaria_MejoraCodigo

./: CMakeLists.txt  README.md
src/: ConsultaVeterinario.cpp  ConsultaVeterinario.h  GestionPerrosController.cpp  GestionPerrosController.h  Perro.cpp  Perro.h  Propietario.cpp  Propietario.h  Raza.cpp  Raza.h  Veterinario.cpp  Veterinario.h  main.cpp
